# latz

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  TODO.md  environment.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.dev.txt  setup.cfg
.github/workflows/: docs.yml  tests.yml
cli_reference/: index.html
creating-plugins/: index.html
docs/: cli_reference.md  creating-plugins.md  index.md  plugin_api_reference.md
latz/: __main__.py  __version__.py  cli.py  constants.py  exceptions.py  fetch.py  image.py
latz/commands/: __init__.py  config.py  get.py  search.py
latz/commands/config/: commands.py  validators.py
latz/config/: __init__.py  errors.py  main.py  models.py
latz/plugins/: __init__.py  hookspec.py  manager.py  types.py
latz/plugins/image/: dummy.py  placeholder.py  unsplash.py
plugin_api_reference/: index.html
recipe/: meta.yaml
search/: search_index.json
stubs/latz/: cli.pyi  constants.pyi  image.pyi
stubs/latz/commands/: search.pyi
stubs/latz/commands/config/: commands.pyi  validators.pyi
stubs/latz/config/: __init__.pyi  errors.pyi  main.pyi  models.pyi
stubs/latz/plugins/: __init__.pyi  hookspec.pyi  manager.pyi
stubs/latz/plugins/image/: placeholder.pyi  unsplash.pyi
tests/: conftest.py  test_config.py
tests/commands/: test_config.py  test_get.py  test_search.py
