[tool.poetry]
name = "latz"
version = "0.1.0"
description = "CLI Program for downloading images. Maybe by location too..."
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "GNU v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
httpx = "^0.23.1"
Pillow = "^9.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
darker = "*"
flake8 = "*"
mypy = "*"
pyupgrade = "*"

[tool.poetry.scripts]
latz = 'latz.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
