[tool.poetry]
name = "latz"
version = "0.2.0"
description = "CLI Program for downloading images. Maybe by location too..."
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "GNU v3"
readme = "README.md"
packages = [
    { include = "latz" },
    { include = "latz/py.typed" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
httpx = "^0.23.1"
Pillow = "^9.3.0"
rich = "^12.6.0"
rich-click = "^1.6.0"
click = "^8.1.3"
pluggy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
darker = "^1.6.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pyupgrade = "^3.3.1"
ipython = "^8.7.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.3"
mkdocs-click = "^0.8.0"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}

[tool.poetry.scripts]
latz = 'latz.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
